--- a/register-office/pom.xml
+++ b/register-office/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>edu.javacourse.ext</groupId>
-    <artifactId>city-register</artifactId>
+    <artifactId>register-office</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
